@@ -49,6 +49,7 @@
  *
  * Modified by Chensong Zhang on 05/01/2012
  * Modified by Chunsheng Feng on 07/22/2013: Add adaptive memory allocate
+ * Modified by Chensong Zhang on 05/09/2015: Clean up for stopping types
  */
 INT fasp_solver_dcsr_pvfgmres (dCSRmat *A,
                                dvector *b,
@@ -135,6 +136,16 @@ INT fasp_solver_dcsr_pvfgmres (dCSRmat *A,
     r_norm = fasp_blas_array_norm2(n, p[0]);
     norms[0] = r_norm;
     
+    // compute stopping criteria
+    switch (stop_type) {
+        case STOP_REL_RES:
+            r_norm = MAX(SMALLREAL,r_norm);
+            break;
+        default:
+            printf("### ERROR: Unrecognised stopping type for %s!\n", __FUNCTION__);
+            goto FINISHED;
+    }
+
     if ( prtlvl >= PRINT_SOME) {
         ITS_PUTNORM("right-hand side", b_norm);
         ITS_PUTNORM("residual", r_norm);
@@ -165,7 +176,7 @@ INT fasp_solver_dcsr_pvfgmres (dCSRmat *A,
             fasp_mem_free(z);
             return iter;
         }
-        
+
         //-----------------------------------//
         //   adjust the restart parameter    //
         //-----------------------------------//
@@ -212,7 +223,6 @@ INT fasp_solver_dcsr_pvfgmres (dCSRmat *A,
                 fasp_array_cp(n, p[i-1], z[i-1]);
             else
                 pc->fct(p[i-1], z[i-1], pc->data);
-            
             
             fasp_blas_dcsr_mxv(A, z[i-1], p[i]);
             
@@ -274,7 +284,7 @@ INT fasp_solver_dcsr_pvfgmres (dCSRmat *A,
         fasp_array_cp(n, z[i-1], r);
         fasp_blas_array_ax(n, rs[i-1], r);
         
-        for ( j = i-2; j >= 0; j-- )  fasp_blas_array_axpy(n, rs[j], z[j], r);
+        for ( j = i-2; j >= 0; j-- ) fasp_blas_array_axpy(n, rs[j], z[j], r);
         
         fasp_blas_array_axpy(n, 1.0, r, x->val);
         
@@ -316,6 +326,7 @@ INT fasp_solver_dcsr_pvfgmres (dCSRmat *A,
     
     if ( prtlvl > PRINT_NONE ) ITS_FINAL(iter,MaxIt,r_norm/den_norm);
     
+FINISHED:
     /*-------------------------------------------
      * Free some stuff
      *------------------------------------------*/
@@ -360,6 +371,8 @@ INT fasp_solver_dcsr_pvfgmres (dCSRmat *A,
  * \date   02/05/2012
  *
  * Modified by Chensong Zhang on 05/01/2012
+ * Modified by Chunsheng Feng on 07/22/2013: Add adaptive memory allocate
+ * Modified by Chensong Zhang on 05/09/2015: Clean up for stopping types
  */
 INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
                                dvector *b,
@@ -389,10 +402,8 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
     REAL   r_norm, b_norm, den_norm;
     REAL   epsilon, gamma, t;
     
-    REAL  *c = NULL, *s = NULL, *rs = NULL;
-    REAL  *norms = NULL, *r = NULL;
-    REAL  **p = NULL, **hh = NULL, **z=NULL;
-    REAL  *work = NULL;
+    REAL   *c = NULL, *s = NULL, *rs = NULL, *norms = NULL, *r = NULL;
+    REAL   **p = NULL, **hh = NULL, **z=NULL;
     
     REAL   cr          = 1.0;     // convergence rate
     REAL   r_norm_old  = 0.0;     // save the residual norm of the previous restart cycle
@@ -410,7 +421,7 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
 #endif
     
     /* allocate memory and setup temp work space */
-    work  = (REAL *) fasp_mem_calloc(worksize, sizeof(REAL));
+    REAL *work  = (REAL *) fasp_mem_calloc(worksize, sizeof(REAL));
     
     /* check whether memory is enough for GMRES */
     while ( (work == NULL) && (Restart > 5) ) {
@@ -436,9 +447,9 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
     norms = (REAL *)fasp_mem_calloc(MaxIt+1, sizeof(REAL));
     
     r = work; rs = r + n; c = rs + Restart1; s = c + Restart;
-    for (i = 0; i < Restart1; i ++) p[i] = s + Restart + i*n;
-    for (i = 0; i < Restart1; i ++) hh[i] = p[Restart] + n + i*Restart;
-    for (i = 0; i < Restart1; i ++) z[i] = hh[Restart] + Restart + i*n;
+    for ( i = 0; i < Restart1; i++ ) p[i] = s + Restart + i*n;
+    for ( i = 0; i < Restart1; i++ ) hh[i] = p[Restart] + n + i*Restart;
+    for ( i = 0; i < Restart1; i++ ) z[i] = hh[Restart] + Restart + i*n;
     
     /* initialization */
     fasp_array_cp(n, b->val, p[0]);
@@ -448,15 +459,25 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
     r_norm = fasp_blas_array_norm2(n, p[0]);
     norms[0] = r_norm;
     
+    // compute stopping criteria
+    switch (stop_type) {
+        case STOP_REL_RES:
+            r_norm = MAX(SMALLREAL,r_norm);
+            break;
+        default:
+            printf("### ERROR: Unrecognised stopping type for %s!\n", __FUNCTION__);
+            goto FINISHED;
+    }
+    
     if ( prtlvl >= PRINT_SOME) {
         ITS_PUTNORM("right-hand side", b_norm);
         ITS_PUTNORM("residual", r_norm);
     }
     
-    if (b_norm > 0.0)  den_norm = b_norm;
-    else               den_norm = r_norm;
+    if ( b_norm > 0.0 ) den_norm = b_norm;
+    else                den_norm = r_norm;
     
-    if (b_norm > 0 ) {
+    if ( b_norm > 0.0 ) {
         print_itinfo(prtlvl,stop_type,iter,norms[iter]/b_norm,norms[iter],0);
     }
     else {
@@ -466,10 +487,11 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
     epsilon = tol*den_norm;
     
     /* outer iteration cycle */
-    while (iter < MaxIt) {
+    while ( iter < MaxIt ) {
+        
         rs[0] = r_norm;
         r_norm_old = r_norm;
-        if (r_norm == 0.0) {
+        if ( r_norm == 0.0 ) {
             fasp_mem_free(work);
             fasp_mem_free(p);
             fasp_mem_free(hh);
@@ -482,14 +504,14 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
         //   adjust the restart parameter    //
         //-----------------------------------//
         
-        if (cr > cr_max || iter == 0) {
+        if ( cr > cr_max || iter == 0 ) {
             Restart = restart_max;
         }
-        else if (cr < cr_min) {
+        else if ( cr < cr_min ) {
             // Restart = Restart;
         }
         else {
-            if (Restart - d > restart_min) {
+            if ( Restart - d > restart_min ) {
                 Restart -= d;
             }
             else {
@@ -497,12 +519,12 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
             }
         }
         
-        if (r_norm <= epsilon && iter >= min_iter) {
+        if ( r_norm <= epsilon && iter >= min_iter ) {
             fasp_array_cp(n, b->val, r);
             fasp_blas_dbsr_aAxpy(-1.0, A, x->val, r);
             r_norm = fasp_blas_array_norm2(n, r);
             
-            if (r_norm <= epsilon) {
+            if ( r_norm <= epsilon ) {
                 break;
             }
             else {
@@ -515,12 +537,12 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
         
         /* RESTART CYCLE (right-preconditioning) */
         i = 0;
-        while (i < Restart && iter < MaxIt) {
+        while ( i < Restart && iter < MaxIt ) {
             
             i ++;  iter ++;
             
             /* apply the preconditioner */
-            if (pc == NULL)
+            if ( pc == NULL )
                 fasp_array_cp(n, p[i-1], z[i-1]);
             else
                 pc->fct(p[i-1], z[i-1], pc->data);
@@ -528,18 +550,18 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
             fasp_blas_dbsr_mxv(A, z[i-1], p[i]);
             
             /* modified Gram_Schmidt */
-            for (j = 0; j < i; j ++) {
+            for ( j = 0; j < i; j++ ) {
                 hh[j][i-1] = fasp_blas_array_dotprod(n, p[j], p[i]);
                 fasp_blas_array_axpy(n, -hh[j][i-1], p[j], p[i]);
             }
             t = fasp_blas_array_norm2(n, p[i]);
             hh[i][i-1] = t;
-            if (t != 0.0) {
+            if ( t != 0.0 ) {
                 t = 1.0 / t;
                 fasp_blas_array_ax(n, t, p[i]);
             }
             
-            for (j = 1; j < i; ++j) {
+            for ( j = 1; j < i; ++j ) {
                 t = hh[j-1][i-1];
                 hh[j-1][i-1] = s[j-1]*hh[j][i-1] + c[j-1]*t;
                 hh[j][i-1] = -s[j-1]*t + c[j-1]*hh[j][i-1];
@@ -557,7 +579,7 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
             r_norm = fabs(rs[i]);
             norms[iter] = r_norm;
             
-            if (b_norm > 0 ) {
+            if ( b_norm > 0 ) {
                 print_itinfo(prtlvl,stop_type,iter,norms[iter]/b_norm,
                              norms[iter],norms[iter]/norms[iter-1]);
             }
@@ -574,7 +596,7 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
         /* now compute solution, first solve upper triangular system */
         
         rs[i-1] = rs[i-1] / hh[i-1][i-1];
-        for (k = i-2; k >= 0; k --) {
+        for ( k = i-2; k >= 0; k-- ) {
             t = 0.0;
             for (j = k+1; j < i; j ++)  t -= hh[k][j]*rs[j];
             
@@ -585,16 +607,16 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
         fasp_array_cp(n, z[i-1], r);
         fasp_blas_array_ax(n, rs[i-1], r);
         
-        for (j = i-2; j >= 0; j --)  fasp_blas_array_axpy(n, rs[j], z[j], r);
+        for ( j = i-2; j >= 0; j-- ) fasp_blas_array_axpy(n, rs[j], z[j], r);
         
         fasp_blas_array_axpy(n, 1.0, r, x->val);
         
-        if (r_norm  <= epsilon && iter >= min_iter) {
+        if ( r_norm  <= epsilon && iter >= min_iter ) {
             fasp_array_cp(n, b->val, r);
             fasp_blas_dbsr_aAxpy(-1.0, A, x->val, r);
             r_norm = fasp_blas_array_norm2(n, r);
             
-            if (r_norm <= epsilon) {
+            if ( r_norm <= epsilon ) {
                 break;
             }
             else {
@@ -602,16 +624,16 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
                 fasp_array_cp(n, r, p[0]); i = 0;
             }
         } /* end of convergence check */
-         
+        
         /* compute residual vector and continue loop */
-        for (j = i; j > 0; j--) {
+        for ( j = i; j > 0; j-- ) {
             rs[j-1] = -s[j-1]*rs[j];
             rs[j] = c[j-1]*rs[j];
         }
         
         if (i) fasp_blas_array_axpy(n, rs[i]-1.0, p[i], p[i]);
         
-        for (j = i-1 ; j > 0; j --) fasp_blas_array_axpy(n, rs[j], p[j], p[i]);
+        for ( j = i-1; j > 0; j-- ) fasp_blas_array_axpy(n, rs[j], p[j], p[i]);
         
         if (i) {
             fasp_blas_array_axpy(n, rs[0]-1.0, p[0], p[0]);
@@ -625,8 +647,9 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
         
     } /* end of iteration while loop */
     
-    if (prtlvl > PRINT_NONE) ITS_FINAL(iter,MaxIt,r_norm/den_norm);
+    if ( prtlvl > PRINT_NONE ) ITS_FINAL(iter,MaxIt,r_norm/den_norm);
     
+FINISHED:
     /*-------------------------------------------
      * Free some stuff
      *------------------------------------------*/
@@ -640,7 +663,7 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
     printf("### DEBUG: %s ...... [Finish]\n", __FUNCTION__);
 #endif
     
-    if (iter>=MaxIt)
+    if ( iter >= MaxIt )
         return ERROR_SOLVER_MAXIT;
     else
         return iter;
@@ -672,6 +695,9 @@ INT fasp_solver_dbsr_pvfgmres (dBSRmat *A,
  * \date   01/04/2012
  *
  * \note   Based on Zhiyang Zhou's pvgmres.c
+ *
+ * Modified by Chunsheng Feng on 07/22/2013: Add adaptive memory allocate
+ * Modified by Chensong Zhang on 05/09/2015: Clean up for stopping types
  */
 INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
                                 dvector *b,
@@ -701,10 +727,8 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
     REAL   r_norm, b_norm, den_norm;
     REAL   epsilon, gamma, t;
     
-    REAL  *c = NULL, *s = NULL, *rs = NULL;
-    REAL  *norms = NULL, *r = NULL;
-    REAL  **p = NULL, **hh = NULL, **z=NULL;
-    REAL  *work = NULL;
+    REAL   *c = NULL, *s = NULL, *rs = NULL, *norms = NULL, *r = NULL;
+    REAL   **p = NULL, **hh = NULL, **z=NULL;
     
     REAL   cr          = 1.0;     // convergence rate
     REAL   r_norm_old  = 0.0;     // save the residual norm of the previous restart cycle
@@ -722,7 +746,7 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
 #endif
     
     /* allocate memory and setup temp work space */
-    work  = (REAL *) fasp_mem_calloc(worksize, sizeof(REAL));
+    REAL *work  = (REAL *) fasp_mem_calloc(worksize, sizeof(REAL));
     
     /* check whether memory is enough for GMRES */
     while ( (work == NULL) && (Restart > 5) ) {
@@ -748,9 +772,9 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
     norms = (REAL *)fasp_mem_calloc(MaxIt+1, sizeof(REAL));
     
     r = work; rs = r + n; c = rs + Restart1; s = c + Restart;
-    for (i = 0; i < Restart1; i ++) p[i] = s + Restart + i*n;
-    for (i = 0; i < Restart1; i ++) hh[i] = p[Restart] + n + i*Restart;
-    for (i = 0; i < Restart1; i ++) z[i] = hh[Restart] + Restart + i*n;
+    for ( i = 0; i < Restart1; i++ ) p[i] = s + Restart + i*n;
+    for ( i = 0; i < Restart1; i++ ) hh[i] = p[Restart] + n + i*Restart;
+    for ( i = 0; i < Restart1; i++ ) z[i] = hh[Restart] + Restart + i*n;
     
     /* initialization */
     fasp_array_cp(n, b->val, p[0]);
@@ -760,15 +784,25 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
     r_norm = fasp_blas_array_norm2(n, p[0]);
     norms[0] = r_norm;
     
+    // compute stopping criteria
+    switch (stop_type) {
+        case STOP_REL_RES:
+            r_norm = MAX(SMALLREAL,r_norm);
+            break;
+        default:
+            printf("### ERROR: Unrecognised stopping type for %s!\n", __FUNCTION__);
+            goto FINISHED;
+    }
+    
     if ( prtlvl >= PRINT_SOME) {
         ITS_PUTNORM("right-hand side", b_norm);
         ITS_PUTNORM("residual", r_norm);
     }
     
-    if (b_norm > 0.0)  den_norm = b_norm;
-    else               den_norm = r_norm;
+    if ( b_norm > 0.0 ) den_norm = b_norm;
+    else                den_norm = r_norm;
     
-    if (b_norm > 0 ) {
+    if ( b_norm > 0.0 ) {
         print_itinfo(prtlvl,stop_type,iter,norms[iter]/b_norm,norms[iter],0);
     }
     else {
@@ -778,10 +812,11 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
     epsilon = tol*den_norm;
     
     /* outer iteration cycle */
-    while (iter < MaxIt) {
+    while ( iter < MaxIt ) {
+        
         rs[0] = r_norm;
         r_norm_old = r_norm;
-        if (r_norm == 0.0) {
+        if ( r_norm == 0.0 ) {
             fasp_mem_free(work);
             fasp_mem_free(p);
             fasp_mem_free(hh);
@@ -794,14 +829,14 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
         //   adjust the restart parameter    //
         //-----------------------------------//
         
-        if (cr > cr_max || iter == 0) {
+        if ( cr > cr_max || iter == 0 ) {
             Restart = restart_max;
         }
-        else if (cr < cr_min) {
+        else if ( cr < cr_min ) {
             // Restart = Restart;
         }
         else {
-            if (Restart - d > restart_min) {
+            if ( Restart - d > restart_min ) {
                 Restart -= d;
             }
             else {
@@ -809,12 +844,12 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
             }
         }
         
-        if (r_norm <= epsilon && iter >= min_iter) {
+        if ( r_norm <= epsilon && iter >= min_iter ) {
             fasp_array_cp(n, b->val, r);
             fasp_blas_bdcsr_aAxpy(-1.0, A, x->val, r);
             r_norm = fasp_blas_array_norm2(n, r);
             
-            if (r_norm <= epsilon) {
+            if ( r_norm <= epsilon ) {
                 break;
             }
             else {
@@ -827,12 +862,12 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
         
         /* RESTART CYCLE (right-preconditioning) */
         i = 0;
-        while (i < Restart && iter < MaxIt) {
+        while ( i < Restart && iter < MaxIt ) {
             
             i ++;  iter ++;
             
             /* apply the preconditioner */
-            if (pc == NULL)
+            if ( pc == NULL )
                 fasp_array_cp(n, p[i-1], z[i-1]);
             else
                 pc->fct(p[i-1], z[i-1], pc->data);
@@ -840,18 +875,18 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
             fasp_blas_bdcsr_mxv(A, z[i-1], p[i]);
             
             /* modified Gram_Schmidt */
-            for (j = 0; j < i; j ++) {
+            for ( j = 0; j < i; j++ ) {
                 hh[j][i-1] = fasp_blas_array_dotprod(n, p[j], p[i]);
                 fasp_blas_array_axpy(n, -hh[j][i-1], p[j], p[i]);
             }
             t = fasp_blas_array_norm2(n, p[i]);
             hh[i][i-1] = t;
-            if (t != 0.0) {
+            if ( t != 0.0 ) {
                 t = 1.0 / t;
                 fasp_blas_array_ax(n, t, p[i]);
             }
             
-            for (j = 1; j < i; ++j) {
+            for ( j = 1; j < i; ++j ) {
                 t = hh[j-1][i-1];
                 hh[j-1][i-1] = s[j-1]*hh[j][i-1] + c[j-1]*t;
                 hh[j][i-1] = -s[j-1]*t + c[j-1]*hh[j][i-1];
@@ -869,7 +904,7 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
             r_norm = fabs(rs[i]);
             norms[iter] = r_norm;
             
-            if (b_norm > 0 ) {
+            if ( b_norm > 0 ) {
                 print_itinfo(prtlvl,stop_type,iter,norms[iter]/b_norm,
                              norms[iter],norms[iter]/norms[iter-1]);
             }
@@ -886,7 +921,7 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
         /* now compute solution, first solve upper triangular system */
         
         rs[i-1] = rs[i-1] / hh[i-1][i-1];
-        for (k = i-2; k >= 0; k --) {
+        for ( k = i-2; k >= 0; k-- ) {
             t = 0.0;
             for (j = k+1; j < i; j ++)  t -= hh[k][j]*rs[j];
             
@@ -897,16 +932,16 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
         fasp_array_cp(n, z[i-1], r);
         fasp_blas_array_ax(n, rs[i-1], r);
         
-        for (j = i-2; j >= 0; j --)  fasp_blas_array_axpy(n, rs[j], z[j], r);
+        for ( j = i-2; j >= 0; j-- ) fasp_blas_array_axpy(n, rs[j], z[j], r);
         
         fasp_blas_array_axpy(n, 1.0, r, x->val);
         
-        if (r_norm  <= epsilon && iter >= min_iter) {
+        if ( r_norm  <= epsilon && iter >= min_iter ) {
             fasp_array_cp(n, b->val, r);
             fasp_blas_bdcsr_aAxpy(-1.0, A, x->val, r);
             r_norm = fasp_blas_array_norm2(n, r);
             
-            if (r_norm <= epsilon) {
+            if ( r_norm <= epsilon ) {
                 break;
             }
             else {
@@ -916,14 +951,14 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
         } /* end of convergence check */
         
         /* compute residual vector and continue loop */
-        for (j = i; j > 0; j--) {
+        for ( j = i; j > 0; j-- ) {
             rs[j-1] = -s[j-1]*rs[j];
             rs[j] = c[j-1]*rs[j];
         }
         
         if (i) fasp_blas_array_axpy(n, rs[i]-1.0, p[i], p[i]);
         
-        for (j = i-1 ; j > 0; j --) fasp_blas_array_axpy(n, rs[j], p[j], p[i]);
+        for ( j = i-1; j > 0; j-- ) fasp_blas_array_axpy(n, rs[j], p[j], p[i]);
         
         if (i) {
             fasp_blas_array_axpy(n, rs[0]-1.0, p[0], p[0]);
@@ -937,8 +972,9 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
         
     } /* end of iteration while loop */
     
-    if (prtlvl > PRINT_NONE) ITS_FINAL(iter,MaxIt,r_norm/den_norm);
+    if ( prtlvl > PRINT_NONE ) ITS_FINAL(iter,MaxIt,r_norm/den_norm);
     
+FINISHED:
     /*-------------------------------------------
      * Free some stuff
      *------------------------------------------*/
@@ -952,7 +988,7 @@ INT fasp_solver_bdcsr_pvfgmres (block_dCSRmat *A,
     printf("### DEBUG: %s ...... [Finish]\n", __FUNCTION__);
 #endif
     
-    if (iter>=MaxIt)
+    if ( iter >= MaxIt )
         return ERROR_SOLVER_MAXIT;
     else
         return iter;
